--- a/main.ipynb
+++ b/main.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "def getnewsabout(company,ondate=\"2019-04-10\"):\n",
-    "    url = \" https://newsapi.org/v2/everything?q=\"+company+\"&from=\"+ondate+\"&to=\"+ondate+\"&sortBy=popularity&apiKey=48a276e66a4f4c51a886044af732a66a\"\n",
+    "    url = \" https://newsapi.org/v2/everything?q=\"+company+\"&from=\"+ondate+\"&to=\"+ondate+\"&sortBy=popularity&apiKey=[HEREAPIKEY]\"\n",
     "    params = {\n",
     "        'format': 'json'\n",
     "            }\n",
